--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=Blog-application
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blogApp
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=20101999
 spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
 
 # ======= JPA / Hibernate Settings =======
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ======= Server Settings =======
-server.port=8082
+server.port=8083
